2004-06-16  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-autoconfig-wizard.glade: Made the activate_defaults
	for the GtkEntries to be TRUE so that the sensitized Forward button
	gets pressed when the user presses Enter key while the focus is in the
	GtkEntry. This fixes #58201

2004-06-14  Dan Winship  <danw@novell.com>

	* shell/e-storage-set-view.c (etree_value_at): Remove unused
	variable

2004-06-14  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c 
	(e_book_backend_exchange_remove_contacts): Handling bulk removal of
	contacts.

	* addressbook/e-book-backend-exchange.c :
	(e_book_backend_exchange_get_static_capabilites): Added "bulk-removes"
	to the static capabilities.
	Fixes #59927

2004-06-12  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-component.c (impl_upgradeFromVersion): Made as
	void function.

	* storage/exchange-migrate.[ch] (exchange_migrate): ditto
 
2004-06-12  Sushma Rai  <rsushma@novell.com>

	* storage/migr-test.c (main): Removed hard coded values, and
	changes to usage and error messages.

2004-06-12  David Malcolm  <dmalcolm@redhat.com>

	* storage/migr-test.c (main): Fixed command-line arg parsing
	of major, minor and revision

2004-06-10  Dan Winship  <danw@novell.com>

	* shell/e-storage-set-view.c (etree_value_at): Remove support for
	unread count

	* storage/exchange-account.c (exchange_account_update_folder):
	Remove this (and the associated signal).

	* storage/exchange-hierarchy.c
	(exchange_hierarchy_updated_folder): Likewise

	* storage/exchange-hierarchy-webdav.c (rescan): Remove call to
	exchange_hierarchy_updated_folder.

	* mail/mail-stub-exchange.c (folder_changed): Just set the
	folder's unread count. Don't worry about telling the
	ExchangeAccount.

2004-06-10  Dan Winship  <danw@novell.com>

	* camel/camel-exchange-transport.c (exchange_send_to): Fix
	camel_session_get_password() args

	* calendar/e-cal-backend-exchange.c (match_recurrence_sexp):
	Unused, remove.
